<resources>
    <string name="app_name">PrepLite</string>
    <string name="forgot_password">"Forgot Password ?        "</string>
    <string name="login_with">login with</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="new_user_register_here">New user ? Register here</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login_here">Already have an account ? login here</string>
    <string name="contact_number">Contact Number</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="tagline">A one stop solution to make career preparation easier for everyone...</string>
    <string name="username">Username</string>
    <string name="company_title">Company Title</string>
    <string name="institute_title">Institute Title</string>
    <string name="about_app">We provide a platform for students to build and take participate in different communities. Each community has vibrant community support that can provide, guide and inform various trending topics.
Alumni and working professionals are an important part of the community. Students can find mentors as well as ask queries about different topics.


</string>
    <string name="author">Author:</string>
    <string name="posted_at">Posted at :</string>
    <string name="content">Content :</string>
    <string name="comments">Comments</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_companies">My Companies</string>
    <string name="my_institutes">My Institutes</string>
    <string name="my_posts">My Posts</string>
    <string name="log_out">Log Out</string>
    <string name="contact">contact</string>
    <string name="name">Name</string>

    <string name="Attach">Attach files</string>
    <string name="posts">Posts</string>
    <string name="institutes">Institutes</string>
    <string name="companies">Companies</string>
    <string name="about">about</string>

</resources>