<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/sample1">

            <ImageView
                android:layout_width="175dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="42dp"
                android:src="@drawable/apklogo" />

        </FrameLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_round">

            <!-- INPUT -->
            <EditText
                android:id="@+id/remail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16dp" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:src="@drawable/email2" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_round">

            <!-- INPUT -->
            <EditText
                android:id="@+id/rname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@id/usericon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14dp" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/usericon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/user" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_round">

            <!-- INPUT -->
            <EditText
                android:id="@+id/ryear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@id/gradicon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="Year"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14dp" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/gradicon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/grad" />




        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_round">

            <!-- INPUT -->
            <EditText
                android:id="@+id/ralumni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@id/alumniicon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="Alumni"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14dp" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/alumniicon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/alumni" />




        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_round">

            <!-- INPUT -->
            <EditText
                android:id="@+id/rpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="14dp"
                tools:ignore="RtlSymmetry,UnknownId" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:src="@drawable/password2" />

        </RelativeLayout>

        <TextView
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="75dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/already_have_an_account_login_here"
            android:textColor="#1566e0"
            android:textSize="12dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/sign_up_with"
                android:textColor="#aeaeae"
                android:textSize="16dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:src="@drawable/google2" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>