<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="15dp"
    app:cardBackgroundColor="#FFFFFF"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/feed_post_compinsti_pic"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_work_24"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeColor="#FF9900"
            app:strokeWidth="1.5dp" />

        <TextView
            android:id="@+id/post_layout_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feed_post_compinsti_pic"
            android:layout_alignBaseline="@id/posted_by"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/posted_by"
            android:fontFamily="@font/amaranth"
            android:text="Username"
            android:textColor="#0000FF"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/posted_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feed_post_compinsti_pic"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/amaranth"
            android:text="@string/author"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/post_layout_comp_insti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/feed_post_compinsti_pic"
            android:fontFamily="@font/amaranth"
            android:text="Company/Insti"
            android:textColor="#0000FF"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_timestamp_hdg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_layout_username"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/amaranth"
            android:text="@string/posted_at"
            android:textColor="#828282"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_layout_username"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@id/post_timestamp_hdg"
            android:fontFamily="@font/amaranth"
            android:text="dd/mm/yyyy"
            android:textColor="#828282"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_layout_username"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/post_date"
            android:fontFamily="@font/amaranth"
            android:text="hh:mm"
            android:textColor="#828282"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_timestamp_hdg"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/amaranth"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/post_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_content"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:drawablePadding="10dp"
            android:fontFamily="@font/amaranth"
            app:drawableEndCompat="@drawable/chat" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>